# loan-calculator-django-vuejs

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  test_python.yaml
calculator/: api.py  models.py  schemas.py  services.py  views.py
calculator/migrations/: 0001_initial.py
calculator/tests/: test_api.py  test_services.py
loan-payment-calculator/: package.json
loan-payment-calculator-frontend/: components.d.ts  package.json
loan-payment-calculator-frontend-bk/: README.md  package.json
loan-payment-calculator-frontend/src/: App.vue
loan-payment-calculator-frontend/src/apis/: serverApi.ts
loan-payment-calculator-frontend/src/components/: LoanPaymentCalculator.vue
loan-payment-calculator/openapi/: server.json
loan-payment-calculator/src/: App.vue
loan-payment-calculator/src/components/: LoanCalculator.vue  LoanPaymentCalculator.vue
loan_calculator/: asgi.py  settings.py  settings_prod.py  urls.py  wsgi.py
